--- a/gb/22/3/28/n13678637.md
+++ b/gb/22/3/28/n13678637.md
@@ -150,7 +150,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11538169.md#1" target="_blank">福瑞德：探寻中国百年历史的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/1/n7484186.md#1" target="_blank">湖北女子患舌癌陷入绝境 修大法八天获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
